--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,13 @@
             <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
         </div>
     </form>
+    {% if messages %}
+    <div class="mt-3">
+        {% for message in messages %}
+            <div class="alert alert-warning">{{ message }}</div>
+        {% endfor %}
+    </div>
+{% endif %}
 </div>
 </div>
  
